[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/anvil/Anvil.gd" type="Script" id=1]
[ext_resource path="res://sprites/minigames/anvil_minigame/CopperFirstPerson.png" type="Texture" id=2]
[ext_resource path="res://sprites/minigames/anvil_minigame/mark.png" type="Texture" id=3]
[ext_resource path="res://scenes/anvil/IngotZone.tscn" type="PackedScene" id=4]
[ext_resource path="res://sprites/minigames/anvil_minigame/MarkDisable.png" type="Texture" id=5]
[ext_resource path="res://sprites/minigames/anvil_minigame/AnvilFirstPerson.png" type="Texture" id=6]
[ext_resource path="res://sprites/minigames/anvil_minigame/OutlineSlider.png" type="Texture" id=7]
[ext_resource path="res://sprites/minigames/anvil_minigame/GreenSlider.png" type="Texture" id=8]
[ext_resource path="res://sprites/minigames/anvil_minigame/Slider.png" type="Texture" id=9]
[ext_resource path="res://sprites/minigames/anvil_minigame/YellowSlider.png" type="Texture" id=10]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.839216, 0.811765, 0.811765, 1 )
border_color = Color( 0.737255, 0.737255, 0.737255, 1 )
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
shadow_color = Color( 0, 0, 0, 0.941176 )
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.929412, 0.756863, 0.0784314, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.76, 0.62016, 0.0608, 1 )
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2
shadow_color = Color( 1, 0.988235, 0.988235, 0.996078 )
shadow_size = 2
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.109804, 0.717647, 0.231373, 1 )
border_width_top = 2
border_width_bottom = 2
border_color = Color( 0.0915, 0.61, 0.1952, 1 )
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.815686, 0.815686, 0.815686, 1 )
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color( 0.866667, 0.866667, 0.866667, 1 )
corner_radius_top_left = 1
corner_radius_top_right = 1
corner_radius_bottom_right = 1
corner_radius_bottom_left = 1
shadow_size = 2
anti_aliasing = false

[node name="Anvil" type="Control"]
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnvilFirstPerson" type="TextureRect" parent="."]
rect_scale = Vector2( 4.383, 4.39 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BladeSprite" type="Sprite" parent="."]
position = Vector2( 344.784, 174.864 )
scale = Vector2( 8, 8 )

[node name="IngotSprite" type="TextureRect" parent="."]
margin_left = 235.771
margin_top = 127.453
margin_right = 284.771
margin_bottom = 151.453
rect_scale = Vector2( 4.383, 4.383 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Ingot" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GridContainer" type="GridContainer" parent="Ingot"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 451.0
margin_top = 127.0
margin_right = 556.0
margin_bottom = 342.0
rect_rotation = 90.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" parent="Ingot/GridContainer" instance=ExtResource( 4 )]
margin_right = 35.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="1" parent="Ingot/GridContainer" instance=ExtResource( 4 )]
margin_left = 35.0
margin_right = 70.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="2" parent="Ingot/GridContainer" instance=ExtResource( 4 )]
margin_left = 70.0
margin_right = 105.0
margin_bottom = 53.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="3" parent="Ingot/GridContainer" instance=ExtResource( 4 )]
margin_top = 53.0
margin_right = 35.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="4" parent="Ingot/GridContainer" instance=ExtResource( 4 )]
margin_left = 35.0
margin_top = 53.0
margin_right = 70.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="5" parent="Ingot/GridContainer" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 53.0
margin_right = 105.0
margin_bottom = 106.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="6" parent="Ingot/GridContainer" instance=ExtResource( 4 )]
margin_top = 106.0
margin_right = 35.0
margin_bottom = 159.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="7" parent="Ingot/GridContainer" instance=ExtResource( 4 )]
margin_left = 35.0
margin_top = 106.0
margin_right = 70.0
margin_bottom = 159.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="8" parent="Ingot/GridContainer" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 106.0
margin_right = 105.0
margin_bottom = 159.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="9" parent="Ingot/GridContainer" instance=ExtResource( 4 )]
margin_top = 159.0
margin_right = 35.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="10" parent="Ingot/GridContainer" instance=ExtResource( 4 )]
margin_left = 35.0
margin_top = 159.0
margin_right = 70.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="11" parent="Ingot/GridContainer" instance=ExtResource( 4 )]
margin_left = 70.0
margin_top = 159.0
margin_right = 105.0
margin_bottom = 212.0
size_flags_horizontal = 3
size_flags_vertical = 3
disabled = true
texture_normal = ExtResource( 3 )
texture_disabled = ExtResource( 5 )
expand = true

[node name="SliderBar" type="Control" parent="."]
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="SliderBar"]
margin_left = 138.0
margin_top = 37.0
margin_right = 550.0
margin_bottom = 59.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="SliderBar"]
margin_left = 141.0
margin_top = 40.0
margin_right = 547.0
margin_bottom = 56.0
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GreenSlider" type="Panel" parent="SliderBar"]
margin_left = 296.0
margin_top = 40.0
margin_right = 390.0
margin_bottom = 56.0
rect_scale = Vector2( 1.454, 1 )
rect_pivot_offset = Vector2( 47, 8 )
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Slider" type="Panel" parent="SliderBar"]
margin_left = 339.0
margin_top = 26.0
margin_right = 347.0
margin_bottom = 70.0
custom_styles/panel = SubResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SliderBar2" type="Control" parent="."]
visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="YellowSlider" type="Sprite" parent="SliderBar2"]
position = Vector2( 344, 48 )
scale = Vector2( 4.383, 4.383 )
texture = ExtResource( 10 )

[node name="GreenSlider" type="Sprite" parent="SliderBar2"]
position = Vector2( 343, 48 )
scale = Vector2( 1.454, 4.383 )
texture = ExtResource( 8 )

[node name="OutlineSlider" type="Sprite" parent="SliderBar2"]
position = Vector2( 344, 48 )
scale = Vector2( 4.383, 4.383 )
texture = ExtResource( 7 )

[node name="Slider" type="Sprite" parent="SliderBar2"]
position = Vector2( 343, 49 )
scale = Vector2( 4.383, 4.383 )
texture = ExtResource( 9 )
